--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -1,7 +1,9 @@
 name: Data pipeline (ingest -> preprocess -> dvc push)
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ develop ]
+  #workflow_dispatch:
   # schedule:
   #   - cron: '0 * * * *'   # hourly ingest (example)
 
@@ -10,35 +12,38 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DVC_REMOTE: ${{ secrets.S3_DVC_REMOTE }}
-      MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
     steps:
-    - uses: actions/checkout@v5
+    
+    - uses: actions/checkout@v6.0.1
     
     - name: Setup python
-      uses: actions/setup-python@v6
-      with:
-        python-version: 3.13
+      uses: actions/setup-python@v6.1.0
+      with: 
+        python-version: '3.13'
         
-    - name: Install deps
-      run: pip install -r requirements.txt dvc[s3]
-      
-    - name: Configure AWS
-      uses: aws-actions/configure-aws-credentials@v2
+    #Connect AWS account with OIDC Provider
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v5.1.1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-region: us-east-1
+        role-to-assume: arn:aws:iam::805702559038:role/Github_Actions_EKS_Repo
+
+    - name: Cache pip
+      uses: actions/cache@v5.0.0
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+    - name: Install deps
+      run: pip install -r requirements.txt
         
     - name: dvc pull (ensure latest artifacts)
       run: |
         dvc remote add -f origin $DVC_REMOTE || true
         dvc pull
-        
-    - name: Run ingestion
-      run: python src/ingest.py --out data/raw/
-      
+             
     - name: Run preprocessing
-      run: python src/preprocess.py --in data/raw/ --out data/processed/
+      run: python src/preprocess.py --input data/raw/ --output data/processed/
       
     - name: dvc add processed data
       run: |
