--- a/.github/workflows/retrain_on_trigger.yml
+++ b/.github/workflows/retrain_on_trigger.yml
@@ -1,9 +1,11 @@
 name: Retrain on trigger
 
 on:
-  repository_dispatch:
-    types: [ trigger_retrain ]
-  workflow_dispatch:
+  push:
+    branches: [ develop ]
+  # repository_dispatch:
+  #   types: [ trigger_retrain ]
+  # workflow_dispatch:
 
 jobs:
   retrain:
@@ -12,21 +14,27 @@ jobs:
       MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
       DVC_REMOTE: ${{ secrets.S3_DVC_REMOTE }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6.0.1
+
     - name: Setup python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
+      uses: actions/setup-python@v6.1.0
+      with: 
+        python-version: '3.13'
+
     - name: Install deps
       run: pip install -r requirements.txt dvc mlflow optuna
+
     - name: dvc pull (get latest labelled data)
       run: |
         dvc remote add -f origin $DVC_REMOTE || true
         dvc pull
+
     - name: Run retraining pipeline (incremental / full)
       run: |
         python src/retrain.py --data-dir data/processed/ --mlflow-uri $MLFLOW_TRACKING_URI --incremental true
+
     - name: Register best model
       run: |
         python src/register_and_deploy.py --action register --mlflow-uri $MLFLOW_TRACKING_URI
