--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,12 +1,14 @@
 name: Train + HPO + Register
 
 on:
-  workflow_dispatch:
   push:
-    paths:
-      - 'data/**'        # run training when data changes
-      - 'src/**'
-      - 'params.yaml'
+    branches: [ develop ]
+  # workflow_dispatch:
+  # push:
+  #   paths:
+  #     - 'data/**'        # run training when data changes
+  #     - 'src/**'
+  #     - 'params.yaml'
 
 jobs:
   train:
@@ -17,29 +19,37 @@ jobs:
       DVC_REMOTE: ${{ secrets.S3_DVC_REMOTE }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6.0.1
+
     - name: Setup python
-      uses: actions/setup-python@v4
-      with: python-version: '3.10'
+      uses: actions/setup-python@v6.1.0
+      with: 
+        python-version: '3.13'
+
     - name: Install deps
       run: pip install -r requirements.txt dvc[s3] mlflow boto3 optuna
-    - name: Configure AWS
-      uses: aws-actions/configure-aws-credentials@v2
+
+    #Connect AWS account with OIDC Provider
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v5.1.1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-region: us-east-1
+        role-to-assume: arn:aws:iam::805702559038:role/Github_Actions_EKS_Repo
+
     - name: dvc pull for training data
       run: |
         dvc remote add -f origin $DVC_REMOTE || true
         dvc pull
+
     - name: Run HPO (Optuna) and training with MLflow tracking
       run: |
         # train.py should log params/metrics/artifacts to MLflow using MLFLOW_TRACKING_URI
         python src/hpo_optuna.py --data-dir data/processed/ --mlflow-uri $MLFLOW_TRACKING_URI --trials 50
+
     - name: Evaluate & register best model to MLflow Registry
       run: |
         python src/register_and_deploy.py --action register --mlflow-uri $MLFLOW_TRACKING_URI
+        
     - name: Optionally trigger deployment workflow
       run: |
         # repository_dispatch to trigger deploy.yml
