--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -3,7 +3,7 @@ name: Data pipeline (ingest -> preprocess -> dvc push)
 on:
   push:
     branches: [ develop ]
-  #workflow_dispatch:
+  workflow_dispatch:
   # schedule:
   #   - cron: '0 * * * *'   # hourly ingest (example)
 
@@ -42,20 +42,20 @@ jobs:
         dvc remote add -f origin $DVC_REMOTE || true
         dvc pull
              
-    - name: Run preprocessing
-      run: python src/preprocess.py --input data/raw/ --output data/processed/
+    # - name: Run preprocessing
+    #   run: python src/preprocess.py --input data/raw/ --output data/processed/
       
-    - name: dvc add processed data
-      run: |
-        dvc add data/processed
-        git add data/processed.dvc .gitignore
-        git commit -m "Data: updated processed snapshot [ci]" || echo "no changes"
+    # - name: dvc add processed data
+    #   run: |
+    #     dvc add data/processed
+    #     git add data/processed.dvc .gitignore
+    #     git commit -m "Data: updated processed snapshot [ci]" || echo "no changes"
         
-    - name: dvc push
-      run: dvc push
+    # - name: dvc push
+    #   run: dvc push
       
-    - name: Create dataset tag (optional)
-      run: |
-        DATA_TAG=$(date -u +%Y%m%dT%H%M%SZ)
-        git tag -a "data-${DATA_TAG}" -m "data snapshot ${DATA_TAG}" || true
-        git push --tags || true
+    # - name: Create dataset tag (optional)
+    #   run: |
+    #     DATA_TAG=$(date -u +%Y%m%dT%H%M%SZ)
+    #     git tag -a "data-${DATA_TAG}" -m "data snapshot ${DATA_TAG}" || true
+    #     git push --tags || true
