added aws creds and token permission

--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'pre-processing/**'
+      - 'requirements.txt'
 
   workflow_dispatch:
   # schedule:
